* Mention autoconfiscation, compile time improvements.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -123,10 +123,12 @@
     <li>The build system has undergone several significant cleanups.
         Subdirectories will only be configured if they are being built, 
         and all subdirectory configures are run from the <code>make</code>
-        command.</li>
+        command.  The top level has been autoconfiscated.</li>
     <li>The <code>-W</code> warning option has been renamed to
         <code>-Wextra</code>, which is more easily understood.  The older
         spelling will be retained for backwards compatibility.</li>
+    <li>Substantial improvements in compile time have been made, particularly
+        for non-optimizing compilations.</li>
   </ul>
 
 </body>
