Mention that new tests should have new names.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -132,6 +132,13 @@ some <a
 href="http://gcc.gnu.org/ml/gcc/2000-01/msg00593.html">copyright
 guidelines</a> on what can be included in the testsuite.</p>
 
+<p>If a testcase itself is incorrect, but there's a possibility that an
+improved testcase might fail on some platform where the incorrect
+testcase passed, the old testcase should be removed and a new testcase
+(with a different name) should be added.  This helps automated
+regression-checkers distinguish a true regression from an improvement
+to the test suite.</p>
+
 
 <h2>Miscellaneous Conventions</h2>
 
