Add powerpc-darwin to secondary evaluation platforms

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -130,6 +130,8 @@ answering questions and reviewing patches as time permits.</p>
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
 <tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td><td>&nbsp;</td></tr>
+<tr><td>PowerPC</td><td>Darwin</td> <td>powerpc-apple-darwin6.3</td>
+    <td><a href="mailto:geoffk@apple.com">Geoffrey Keating</a></td></tr>
 </table>
 
 <h2>Language Support</h2>
