Updated as per http://gcc.gnu.org/ml/gcc/2003-03/msg00194.html

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -126,7 +126,7 @@ answering questions and reviewing patches as time permits.</p>
                       <td>powerpc-linux-gnu</td>
     <td><a href="mailto:Franz.Sirl-kernel@lauterbach.com">Franz Sirl</a></td>
 </tr>
-<tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-sun-linux-gnu</td>
+<tr><td>SPARC</td>    <td>Debian GNU/Linux 2.3.1</td><td>sparc-unknown-linux-gnu</td>
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
 <tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td><td>&nbsp;</td></tr>
