Add x86_64-suse-linux-gnu to secondary evaluation platforms

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -132,6 +132,8 @@ answering questions and reviewing patches as time permits.</p>
 <tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td><td>&nbsp;</td></tr>
 <tr><td>PowerPC</td><td>Darwin</td> <td>powerpc-apple-darwin6.3</td>
     <td><a href="mailto:geoffk@apple.com">Geoffrey Keating</a></td></tr>
+<tr><td>AMD Opteron</td><td>SuSE GNU/Linux Enterprise Server 8</td> <td>x86_64-suse-linux-gnu</td>
+    <td><a href="mailto:aj@suse.de">Andreas Jaeger</a></td></tr>
 </table>
 
 <h2>Language Support</h2>
