--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -223,12 +223,6 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>This branch is equivalent to the cfg-branch with the exception that it
   is based on gcc-pre3.4 tree, instead of gcc-pre3.3 cfg-branch is based on.</dd>
 
-  <dt>gcc-3_4-basic-improvements-branch</dt> 
-  <dd>This branch is for basic,
-  straightforward improvements, which will be easy to merge back into
-  the mainline at the beginning of development stage 1 for gcc 3.4
-  (<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01575.html">more information</a>).</dd>
-
   <dt><a href="projects/cxx-reflection/">cxx-reflection-branch</a></dt>
   <dd>Part of the work on providing support for compile time
   reflection in C++ is done in this branch.</dd>
@@ -282,6 +276,9 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>This branch has been merged into the mainline.</dd>
 
   <dt>pch-branch</dt>
+  <dd>This branch has been merged into the mainline.</dd>
+
+  <dt>gcc-3_4-basic-improvements-branch</dt>
   <dd>This branch has been merged into the mainline.</dd>
 
 </dl>
