* gcc-3.3/changes.html: Update.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -17,6 +17,10 @@
     <li>The preprocessor no longer accepts multi-line string literals.
         They were deprecated in 3.0, 3.1, and 3.2.</li>
 
+    <li>The preprocessor no longer supports the <code>-A-</code>
+	switch when appearing alone.  <code>-A-</code> followed by an
+	assertion is still supported.</li>
+
     <li>Support for all the systems <a
         href="../gcc-3.1/changes.html#obsolete_systems">obsoleted in
         GCC 3.1</a> has been removed from GCC 3.3.  See <a
