* contrib.html: Refer to GCC Installation Notes for further 	information on testing.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -169,12 +169,9 @@ projects</a>.</p>
   <li>Send the patch to java-patches and then commit of you're allowed to.</li>
 </ul>
 
-<p>
-
-There is also some documentation on <a href="test.html">how to run
-test cases</a>.  This covers both our built-in tests and extra test
-suites we use.
-</p>
+<p>More detailed documentation on <a
+href="http://gcc.gnu.org/install/test.html">how to run tests</a> is
+included in the GCC installation notes.</p>
 
 </body>
 </html>
