Add a line-break into the (long) <h1>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -9,7 +9,7 @@
 -->
 
 <body>
-<h1>GCC 3.3 Release Series &mdash; Changes, New Features, and Fixes</h1>
+<h1>GCC 3.3 Release Series<br />Changes, New Features, and Fixes</h1>
 
 <h2>Caveats</h2>
 
