--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1>GCC 3.2 Release Series &mdash; Changes, New Features, and Fixes</h1>
+<h1>GCC 3.2 Release Series<br />Changes, New Features, and Fixes</h1>
 
 <h2>Caveats and New Features</h2>
 
