Document savannah-hackers@gnu.org as contact address for the subversions.gnu.org repository.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -55,6 +55,8 @@ to check out the compiler sources, respectively
 will sync your local copy with the repository.  See the CVS manual for
 additional information on how to use CVS.</p>
 
+<p>In case of problems with the repository at subversions.gnu.org please
+contact savannah-hackers@gnu.org.</p>
 
 <h3><a name="generated_files"></a>Generated files</h3>
 
