2003-03-21  Janis Johnson  <janis187@us.ibm.com>
	* testing/index.html: Update references to FTensor.
	* testing/testing-ftensor.html: Update for new version of FTensor.
	* gcc-3.3/criteria.html: Update references to FTensor.

--- a/htdocs/gcc-3.3/criteria.html
+++ b/htdocs/gcc-3.3/criteria.html
@@ -218,11 +218,11 @@ different programming languages.</p>
     <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
     <td><a href="../testing/testing-boost.html">build and test guide</a></td>
 </tr>
-<tr><td><a href="http://superbeast.ucsd.edu/~landry/FTensor/">FTensor</a></td>
+<tr><td><a href="http://www.oonumerics.org/FTensor/">FTensor</a></td>
     <td>C++</td>
-    <td>1.1 patch 16</td>
-    <td><a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
-         FTensor_gcc_integration_test.tar.gz</a></td>
+    <td>1.1 pre22</td>
+    <td><a href="http://www.oonumerics.org/FTensor/FTensor-1.1pre22.tar.gz">
+         FTensor-1.1pre22.tar.gz</a></td>
     <td><a href="../testing/testing-ftensor.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
