--- a/htdocs/testing/testing-ftensor.html
+++ b/htdocs/testing/testing-ftensor.html
@@ -9,14 +9,14 @@
 
 <p>This page is a guide to running the testing and timing programs for the
 FTensor tensor class library as part of GCC integration testing.  FTensor
-does not build successfully with versions of GCC earlier than 3.1.</p>
+can be built with GCC version 3.1 and later.</p>
 
 <h2>Resource usage</h2>
 
 <p>The FTensor distribution, available at
-<a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
-FTensor_gcc_integration_test.tar.gz</a>, is a 176K file.  The uncompressed
-distribution comprises some 4.5 MB of source files.  Building the testing
+<a href="http://www.oonumerics.org/FTensor/FTensor-1.1pre22.tar.gz">
+FTensor-1.1pre22.tar.gz</a>, is a 169K file.  The uncompressed
+distribution comprises some 2.3 MB of source files.  Building the testing
 and timing programs adds between 20 and 32 MB of object files and executables
 to this.</p>
 
@@ -29,13 +29,13 @@ performance tests take 3 minutes.</p>
 <ul>
 <li>Unpack the file:
 <ul>
-<li><code>tar zxf FTensor_gcc_integration_test.tar.gz</code>, or</li>
-<li><code>gunzip -c FTensor_gcc_integration_test.tar.gz | tar xf -</code></li>
+<li><code>tar zxf FTensor-1.1pre22.tar.gz</code>, or</li>
+<li><code>gunzip -c FTensor-1.1pre22.tar.gz | tar xf -</code></li>
 </ul>
 </li>
 <li>Change directory to the repository thus created:
 <ul>
-<li><code>cd FTensor--main--1.1--patch-16</code></li>
+<li><code>cd FTensor-1.1pre22</code></li>
 </ul>
 </li>
 </ul>
@@ -94,8 +94,9 @@ followed by the unique test name.  There should be no failures.</p>
 
 <h2>Timing</h2>
 
-<p>FTensor didn't build with versions of GCC before 3.1, so it cannot
-be used for comparing performance between GCC 3.1 and earlier versions.</p>
+<p>The timing information output by the script
+<code>tests/speed/one_over_script</code> can be compared for different
+versions of GCC, starting with version 3.1.</p>
 
 <h2>Cleanup</h2>
 
