--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -101,11 +101,11 @@ the test suite directories.</p>
     <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
     <td><a href="testing-boost.html">testing-boost</a></td>
 </tr>
-<tr><td><a href="http://superbeast.ucsd.edu/~landry/FTensor/">FTensor</a></td>
+<tr><td><a href="http://www.oonumerics.org/FTensor/">FTensor</a></td>
     <td>C++</td>
-    <td>1.1 patch 16</td>
-    <td><a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
-         FTensor_gcc_integration_test.tar.gz</a></td>
+    <td>1.1 pre22</td>
+    <td><a href="http://www.oonumerics.org/FTensor/FTensor-1.1pre22.tar.gz">
+         FTensor-1.1pre22.tar.gz</a></td>
     <td><a href="testing-ftensor.html">testing-ftensor</a></td>
 </tr>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
