Add lots of 3.2.2 test result links.

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -43,7 +43,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00361.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00361.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00351.html">3.2.2</a>
 </td>
 </tr>
 
@@ -116,6 +117,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2003-01/msg00556.html">3.2.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-01/msg00441.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>arm-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00622.html">3.2.2</a>
 </td>
 </tr>
 
@@ -364,7 +373,12 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00489.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00492.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00497.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00500.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00500.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00341.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00527.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00567.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00355.html">3.2.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00345.html">3.2.2</a>
 </td>
 </tr>
 
@@ -700,6 +714,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>ia64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00348.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.9</td>
 <td>Successful (C, C++, F77):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00969.html">3.2</a>
@@ -730,7 +752,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-sgi-irix6.2</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00739.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00739.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00295.html">3.2.2</a>
 </td>
 </tr>
 
@@ -738,7 +761,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>mips-sgi-irix6.5</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00740.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00740.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00311.html">3.2.2</a>
 </td>
 </tr>
 
@@ -763,6 +787,21 @@ Installing GCC: Final Installation</a>.</p>
 <td>IRIX 6.5</td>
 <td>Successful build, but thread problems:
 <a href="http://gcc.gnu.org/ml/gcc/2003-03/msg00532.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>mips-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00410.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
+<td>mipsel-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00350.html">3.2.2</a>
 </tr>
 
 <tr>
@@ -855,6 +894,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00352.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>Debian Woody, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01307.html">3.2</a>
@@ -894,6 +941,14 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00496.html">3.2.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-12/msg00344.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00294.html">3.2.2</a>
 </td>
 </tr>
 
@@ -944,7 +999,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00738.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00738.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00297.html">3.2.2</a>
 </td>
 </tr>
 
@@ -1059,7 +1115,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparcv9-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-02/msg00304.html">3.2.2</a>
 </td>
 </tr>
 
