Update releasing and branching documentation for bugzilla.

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -62,6 +62,21 @@ to the translation project</a>.</li>
 <code>gcc/configure.in</code> so that <code>--disable-werror</code> is
 the default.</li>
 
+<li>Create new versions in Bugzilla corresponding to the new mainline 
+version.  This can be accomplished by choosing products, choosing gcc, 
+and editing the versions.  Please do <strong>not</strong> delete old
+versions.</li>
+
+<li>Create new target milestones in Bugzilla corresponding to the new 
+mainline version.  This can be accomplished by choosing products, 
+choosing gcc, and editing the milestones.  Please do <strong>not</strong>
+delete old target milestones.</li>
+
+<li>Update the email parsing script to handle bugs against the new versions.
+The script is in CVS at <code>wwwdocs/bugzilla/contrib/bug_email.pl</code>. 
+Search for an existing version (like "3.3"), and update both places
+it occurs to handle the new version through copy and paste.</li>
+
 </ol>
 
 </body>
