Set GCC-3,2,3 release.2

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -265,7 +265,7 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.2.2 release (Feb 05 2003)
        |                                                \
        |                                                 v
-       |                                   GCC 3.2.3 release (...)
+       |                                   GCC 3.2.3 release (April 15 2003)
        v
   GCC 3.3 Stage 2 (ends Aug 15 2002)
        |
