Update reference to gnatswrite.html (and have it point to bugs/management.html instead).

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -12,8 +12,8 @@
 <h1>Read-write CVS access</h1>
 
 <p>We have read/write access to the CVS repository available for all
-our significant developers. Maintainers are also encouraged to edit
-the <a href="gnatswrite.html">GNATS database</a>.</p>
+our significant developers. Maintainers are also encouraged to <a
+href="bugs/management.html">edit our bugs database</a>.</p>
 
 <hr />
 <h2>Contents</h2>
